--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,14 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Nuv from '../components/Nuv.astro';
+import PrImage from '../components/PrImage.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 <Nuv />
+<PrImage />
 <Card />
 </Layout>
-
 <style>
 
 </style>
