--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,7 +16,8 @@ import List from "./List.astro";
 		margin: auto;
 		border-radius: 4px;
 		border: 1px solid #c8c3c3;
-	  padding: 60px;
+	  padding: 50px;
+		margin-bottom: 100px;
 	}
 
 </style>
