--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,13 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Nuv from '../components/Nuv.astro';
 import PrImage from '../components/PrImage.astro';
+import TopImage from '../components/TopImage.jsx';
 ---
 
 <Layout title="Welcome to Astro.">
 <Nuv />
-<PrImage />
+<PrImage/>
+<TopImage/>
 <Card />
 </Layout>
 <style>
