--- a/src/components/PrImage.astro
+++ b/src/components/PrImage.astro
@@ -1,3 +1,6 @@
+---
+
+---
 
 
 <div class="Pr__image">
@@ -6,11 +9,11 @@
 <style>
 
   .Pr__image{
-    width: 1100px;
+    /* width: 1100px;
     height: 300px;
     background: url(../Images/Main.jpg) no-repeat center/cover ;
     margin: auto auto 30px;
-  
+   */
   }
 
   
