パラメータ追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,13 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Nuv from '../components/Nuv.astro';
-import PrImage from '../components/PrImage.astro';
+// import PrImage from '../components/PrImage.astro';
 import TopImage from '../components/TopImage.jsx';
 ---
 
 <Layout title="Welcome to Astro.">
 <Nuv />
-<PrImage/>
-<TopImage/>
+<TopImage client:load/>
 <Card />
 </Layout>
 <style>
