--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Nuv from '../components/Nuv.astro';
-// import PrImage from '../components/PrImage.astro';
 import TopImage from '../components/TopImage.jsx';
+import Footer from '../components/Info.astro.jsx';
+import News from '../components/News.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 <Nuv />
 <TopImage client:load/>
 <Card />
+<News />
 </Layout>
 <style>
 
