--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Nuv from '../components/Nuv.astro';
+import Card from "../components/Card/Card.astro"
+import Nuv from "../components/Nuv/Nuv.astro"
 import TopImage from '../components/TopImage.jsx';
-import Footer from '../components/Info.astro.jsx';
-import News from '../components/News.astro';
+import News from "../components/News/News.astro";
 ---
 
 <Layout title="Welcome to Astro.">
