--- a/src/components/List/List.astro
+++ b/src/components/List/List.astro
@@ -1,7 +1,9 @@
 ---
 
 import { Image } from 'astro:assets';
+import "../List/List.css"
 const {url,image,text} = Astro.props
+
 
 ---
 
@@ -14,37 +16,3 @@ const {url,image,text} = Astro.props
       </div>
 
 
-
-<style>
-*{
-  padding: 0;
-  margin: 0;
-}
-
-
-.card_item{
-list-style:none;
-width: 100%;
-}
-
-.card_item-text{
-list-style:none;
-width:100%;
-font-size:14px;
-}
-
-img{
-  width:100%;
-  height: 200px;
-  cursor: pointer;
-  object-fit:cover;
-}
-
-
-
-
-
-
-
-
-  </style>
