--- a/src/components/Card/Card.astro
+++ b/src/components/Card/Card.astro
@@ -4,7 +4,7 @@ import Image1 from "../../Images/pr1.webp"
 import Image2 from "../../Images/pr2.webp"
 import Image3 from "../../Images/pr3.webp"
 import Image4 from "../../Images/pr4.webp"
-import "../Card/Card.css"
+import "../Card/Card.scss"
 
 
 const ListItems = [
