--- a/src/components/Nuv/Nuv.astro
+++ b/src/components/Nuv/Nuv.astro
@@ -1,11 +1,11 @@
 ---
 import Text from "../Nuv/Text.jsx";
-import "../Nuv/Nuv.css"
+import "../Nuv/Nuv.scss"
 ---
 
 
-<div class="nuv_wrapper">
-  <div class="nuv_title">
+<div class="nuv__wrapper">
+  <div class="nuv__wrapper-title">
     <Text client:load />
   </div>
 </div>
