--- a/src/components/News/News.astro
+++ b/src/components/News/News.astro
@@ -22,11 +22,19 @@ const NewsItems = [
     text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
   },
   {
-    title:"重要",
+    title:"お知らせ",
     text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
   },
   {
-    title:"重要",
+    title:"その他",
+    text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
+  },
+  {
+    title:"ご挨拶",
+    text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
+  },
+  {
+    title:"速報",
     text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
   },
 ]
