--- a/src/components/List/List.astro
+++ b/src/components/List/List.astro
@@ -2,7 +2,7 @@
 
 import { Image } from 'astro:assets';
 import "../List/List.scss"
-const {url,image,text} = Astro.props
+const {url,image,content} = Astro.props
 
 
 ---
@@ -12,7 +12,7 @@ const {url,image,text} = Astro.props
     <div class="card__item">
       <a href={url} target="_blank">
       <Image src={image} alt=""/></a>
-      <p class="card__item-text">{text}</p>
+      <p class="card__item-text">{content}</p>
       </div>
 
 
