--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import Card from "../components/Card/Card.astro"
 import Nuv from "../components/Nuv/Nuv.astro"
 import TopImage from '../components/TopImage.jsx';
 import News from "../components/News/News.astro";
+import Slide from '../components/Slide';
 ---
 
 <Layout title="Welcome to Astro.">
-<Nuv />
-<TopImage client:load/>
+<Nuv client:load/>
+<!-- <TopImage client:load/> -->
+<Slide client:load/>
 <Card />
 <News />
 </Layout>
