--- a/src/components/Nuv/Nuv.astro
+++ b/src/components/Nuv/Nuv.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import Text from "../Nuv/Text.jsx";
 import "../Nuv/Nuv.scss"
 ---
@@ -6,8 +6,8 @@ import "../Nuv/Nuv.scss"
 
 <div class="nuv__wrapper">
   <div class="nuv__wrapper-title">
-    <Text client:load />
+    <Text client:load/>
   </div>
-</div>
+</div> -->
 
 
