--- a/src/components/Nuv/Nuv.scss
+++ b/src/components/Nuv/Nuv.scss
@@ -1,11 +1,11 @@
-.nuv__wrapper {
-  width: 100%;
-  background-color: rgb(69, 69, 199);
-  margin: 0px 0px 30px 0px;
+// .nuv__wrapper {
+//   width: 100%;
+//   background-color: rgb(69, 69, 199);
+//   margin: 0px 0px 30px 0px;
 
-  &-title {
-    width: 1100px;
-    margin: auto;
-    user-select: none;
-  }
-}
+//   &-title {
+//     width: 1100px;
+//     margin: auto;
+//     user-select: none;
+//   }
+// }
