--- a/src/components/Nuv/Nuv.astro
+++ b/src/components/Nuv/Nuv.astro
@@ -1,6 +1,6 @@
-<!-- ---
-import Text from "../Nuv/Text.jsx";
+---
 import "../Nuv/Nuv.scss"
+import Text from "../Nuv/Text"
 ---
 
 
@@ -8,6 +8,6 @@ import "../Nuv/Nuv.scss"
   <div class="nuv__wrapper-title">
     <Text client:load/>
   </div>
-</div> -->
+</div>
 
 
