--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Slide from '../components/Slide';
 ---
 
 <Layout title="Welcome to Astro.">
-<Nuv />
+<Nuv client:load/>
 <!-- <TopImage client:load/> -->
 <Slide client:load/>
 <Card />
