--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -2,6 +2,7 @@
 import LinkLayout from "../layouts/LinkLayout.astro";
 // import Header from "../components/Link/Header.astro"
 import Scroll from "../components/Link/Scroll";
+import Slider2 from "../components/Slider2";
 
 
 
