--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,14 @@ import Nuv from "../components/Nuv/Nuv.astro"
 import TopImage from '../components/TopImage.jsx';
 import News from "../components/News/News.astro";
 import Slide from '../components/Slide';
+import Slider2 from '../components/Slider2';
 ---
 
 <Layout title="Welcome to Astro.">
 <Nuv />
 <!-- <TopImage client:load/> -->
-<Slide client:load/>
+<!-- <Slide client:load/> -->
+<Slider2 client:load/>
 <Card />
 <News />
 </Layout>
