--- a/src/components/Slider2.scss
+++ b/src/components/Slider2.scss
@@ -1,9 +1,21 @@
 .mySwiper {
   width: 1100px;
   margin-bottom: 30px;
-  img {
-    width: 100%;
+
+  .bg1 {
     height: 300px;
-    object-fit: cover;
+    background: url(../Images/Main.jpg) no-repeat center / cover;
+  }
+  .bg2 {
+    height: 300px;
+    background: url(../Images/slide.webp) no-repeat center / cover;
+  }
+  .bg3 {
+    height: 300px;
+    background: url(../Images/slide2.jpg) no-repeat center / cover;
+  }
+  .bg4 {
+    height: 300px;
+    background: url(../Images/slide3.jpg) no-repeat center / cover;
   }
 }
