--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,19 +2,15 @@
 import Layout from '../layouts/Layout.astro';
 import Card from "../components/Card/Card.astro"
 import Nuv from "../components/Nuv/Nuv.astro"
-import TopImage from '../components/TopImage.jsx';
+// import TopImage from '../components/TopImage.jsx';
 import News from "../components/News/News.astro";
-import Slide from '../components/Slide';
-import Slider2 from '../components/Slider2';
+import Slider2 from '../components/Slider/Slider2';
 ---
 
 <Layout title="Welcome to Astro.">
 <Nuv />
 <!-- <TopImage client:load/> -->
-<!-- <Slide client:load/> -->
 <Slider2 client:load/>
 <Card />
 <News />
 </Layout>
-
-../Images/Nuv/Nuv.astro
