--- a/src/components/Link/Header.scss
+++ b/src/components/Link/Header.scss
@@ -4,10 +4,14 @@
   margin: 0;
 }
 
-.header__wrapper {
+.header {
   width: 100%;
-  margin: auto;
   background-color: rgb(69, 69, 199);
+}
+
+.header__wrapper {
+  width: 1200px;
+  margin: auto;
   height: 100px;
   display: flex;
   justify-content: space-between;
