--- a/src/layouts/LinkLayout.astro
+++ b/src/layouts/LinkLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Scroll from "../components/Link/Scroll";
 const { title } = Astro.props;
 ---
 
@@ -13,6 +14,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<slot />
+		<!-- <Scroll client:only/> -->
 	</body>
 </html>
 <style>
