--- a/src/components/Link/Header.astro
+++ b/src/components/Link/Header.astro
@@ -6,7 +6,7 @@ import Scroll from "./Scroll";
 ---
 <div class="header">
 <div class="header__wrapper">
-  <h3 class="header__wrapper-title">スタディサプリ</h3>
+  <h3 class="header__wrapper-title"><a href ="/">スタディサプリ</h3></a>
   <ul class="header__wrapper-list">
     {ListItems.map((item) => (
       <li class="header__wrapper-list-item">{item}</li>
