--- a/src/components/News/News.astro
+++ b/src/components/News/News.astro
@@ -6,12 +6,8 @@ import Info from "../Info/Info.jsx"
 
 const NewsItems = [
   {
-    title:"重要",
-    text:"日常英会話コースリニューアルに伴う、『スタディサプリENGLISH 日常英会話コース（旧アプリ）』終了のお知らせ"
-  },  
-  {
     title:"お知らせ",
-    text:"年末年始期間中の対応について"
+    text:"年末年始の休業期間について"
   },
   {
     title:"速報",
@@ -29,14 +25,7 @@ const NewsItems = [
     title:"その他",
     text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
   },
-  {
-    title:"ご挨拶",
-    text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
-  },
-  {
-    title:"速報",
-    text:"有料会員権利付与漏れのお詫びとご返金のお知らせ"
-  },
+
 ]
 
 ---
