--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -1,3 +1,5 @@
+@import "../../mixin";
+
 .news__wrapper {
   padding: 30px 0px 30px 0px;
   width: 1100px;
@@ -5,6 +7,7 @@
   display: flex;
   cursor: pointer;
   border-bottom: 1px solid rgba(255, 255, 255, 0.166);
+  background-color: $bg;
 
   &:hover {
     opacity: 0.8;
@@ -20,6 +23,9 @@
     line-height: 30px;
     margin-right: 40px;
     font-size: 14px;
+    @include mq(tab) {
+      margin-left: 40px;
+    }
   }
 
   &-text {
@@ -28,6 +34,9 @@
     justify-content: space-between;
     align-items: center;
     font-size: 16px;
+    @include mq(tab) {
+      width: 750px;
+    }
 
     a {
       color: #fff;
