--- a/src/components/Link/Header.scss
+++ b/src/components/Link/Header.scss
@@ -1,3 +1,5 @@
+@import "../../mixin";
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -6,7 +8,7 @@
 
 .header {
   width: 100%;
-  background-color: rgb(69, 69, 199);
+  background-color: $bg;
 }
 
 .header__wrapper {
@@ -17,15 +19,33 @@
   justify-content: space-between;
   align-items: center;
   color: #fff;
+  background-color: $bg;
+  @include mq(tab) {
+    flex-direction: column;
+    justify-content: center;
+    height: 200px;
+  }
 
   &-title {
     margin-left: 50px;
+    font-size: 22px;
+
+    @include mq(tab) {
+      font-size: 50px;
+      padding-bottom: 20px;
+    }
+
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
   }
 
   &-list {
     list-style: none;
     display: flex;
     margin-right: 50px;
+    font-size: 18px;
 
     &-item {
       margin-left: 50px;
