--- a/src/components/Link/Scroll.scss
+++ b/src/components/Link/Scroll.scss
@@ -1,9 +1,11 @@
+@import "../../mixin";
+
 .scroll__wrapper {
   background-color: rgb(78, 33, 33);
 }
 
 .toTop {
-  background-color: rgb(69, 69, 199);
+  background-color: $bg;
   width: 100%;
   height: 60px;
   line-height: 60px;
