--- a/src/components/News/News.scss
+++ b/src/components/News/News.scss
@@ -1,8 +1,12 @@
+@import "../../mixin";
+
 .info__wrapper {
-  margin: 0;
   width: 100%;
-  background-color: rgb(69, 69, 199);
   padding-bottom: 100px;
+  background-color: $bg;
+  @include mq(tab) {
+    padding-bottom: 0px;
+  }
 
   &-title {
     width: 1100px;
@@ -13,5 +17,6 @@
     color: rgba(255, 255, 255, 0.651);
     height: 120px;
     line-height: 120px;
+    background-color: $bg;
   }
 }
