--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -25,6 +25,7 @@
     font-size: 14px;
     @include mq(tab) {
       margin-left: 40px;
+      font-size: 20px;
     }
   }
 
@@ -36,6 +37,7 @@
     font-size: 16px;
     @include mq(tab) {
       width: 750px;
+      font-size: 28px;
     }
 
     a {
