--- a/src/components/Link/Header.scss
+++ b/src/components/Link/Header.scss
@@ -46,6 +46,10 @@
     display: flex;
     margin-right: 50px;
     font-size: 18px;
+    @include mq(tab) {
+      font-size: 24px;
+      margin-right: 0;
+    }
 
     &-item {
       margin-left: 50px;
