--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Slider2 from '../components/Slider/Slider2';
 <Nuv />
 <!-- <TopImage client:load/> -->
 <Slider2 client:load/>
+<h1>あああ</h1>
 <Card />
 <News />
 </Layout>
